--- a/index.html.in
+++ b/index.html.in
@@ -18,7 +18,7 @@
     <p><a
     href="http://www.hellfly.net/~dhellmann/Proctor/Proctor-VERSION.tar.gz">Download</a></p>
 
-    <p>For help with the command line interface, run <tt>procctorbatch
+    <p>For help with the command line interface, run <tt>proctorbatch
         --help</tt>.</p>
 
     <hr>
