Add proctorfilter. Update copyright dates. Other fixes to output.

--- a/setup.py.in
+++ b/setup.py.in
@@ -79,6 +79,6 @@ setup (
     
     package_dir = { '': '.' },
     
-    scripts = ['proctorbatch'],
+    scripts = ['proctorbatch', 'proctorfilter', 'coveragemerge'],
     )
 
