do not redistribute coverage, use a dependency to ensure it is installed

--- a/setup.py.in
+++ b/setup.py.in
@@ -80,5 +80,7 @@ setup (
     package_dir = { '': '.' },
     
     scripts = ['proctorbatch', 'proctorfilter', 'coveragemerge'],
+
+    requires=['coverage'],
     )
 
