Coverage doesn't support download via easy_install, so just include the new version.

--- a/setup.py.in
+++ b/setup.py.in
@@ -81,6 +81,7 @@ setup (
     
     scripts = ['proctorbatch', 'proctorfilter', 'coveragemerge'],
 
-    requires=['coverage'],
+    provides=['Proctor VERSION'],
+    #requires=['coverage'],
     )
 
