Remove coverage.py from Proctor distro, again

--- a/setup.py.in
+++ b/setup.py.in
@@ -88,6 +88,6 @@ setup (
     provides=['Proctor',
               'proctorlib',
               ],
-    #requires=['coverage'],
+    requires=['coverage (>=2.77)'],
     )
 
